Align C++ better with C

--- a/sycl/Makefile
+++ b/sycl/Makefile
@@ -1,6 +1,8 @@
 # Remember to enable oneapi, eg:
 # source /opt/intel/oneapi/setvars.sh
 
+# Equivivalent openmp: ../parallel_random_walk 500 10000 20
+
 CPP=icpx -fsycl
 
 prw_sycl : prw_sycl.o
